automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         
         <div>
           <label for="phone">Telephone:</label>
-          <input required type="tel" name="phone" id="phone" placeholder="Enter Telephone">
+          <input required type="tel" name="phone" 
+          id="phone" placeholder="Enter Telephone">
         </div>
       <!-- Add a label for 'message'-->
 
