automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div>
           <label for="phone">Telephone:</label>
           <input required type="tel" name="phone" 
-          id="phone" placeholder="Enter Telephone">
+          id="phone" placeholder="Enter Telephone" (optional)>
         </div>
       <!-- Add a label for 'message'-->
 
